--- a/src/main/resources/static/search.css
+++ b/src/main/resources/static/search.css
@@ -6,9 +6,8 @@ body {
 #grid{
     background: rgb(102, 85, 143);
 }
-
-.home{
-    height: 80%;
+.home {
+    height: 50em;
 }
 
 .home h1{
@@ -17,10 +16,6 @@ body {
 
 .home p{
     color: rgb(225, 208, 208);
-}
-
-.left-arrow{
-    height: 80%;
 }
 
 .left-arrow:hover {
@@ -34,7 +29,8 @@ body {
     position: relative; 
     transform: translate(-50%, 0);
     left: 50%;
-    height: 80%;
+    height: 7em;
+    transition: all .2s linear;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
