--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -7,9 +7,11 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900);
 @import url(https://fonts.googleapis.com/css?family=Muli);
 
+/*
 html {
     height: 100%;
 }
+*/
 
 ::-webkit-scrollbar {
     width: 1em;
@@ -32,15 +34,17 @@ body {
     background: linear-gradient(90deg, rgb(58, 96, 134) 0%, rgba(53,108,162,1) 100%, rgba(37,73,96,1) 100%);
 
     margin: 0; 
-    height: 100%;
+    display: flex; 
+    flex-direction: column;
+    /*height: 100%;*/
 }
 
 
 .nav-menu {
     position: relative; 
     width: 100%;
-    height: 8em;
-    height: 14%;
+    height: 10em;
+    /*height: 14%;*/
     top: 0;
 }
 
@@ -103,7 +107,8 @@ body {
 
 .home{
     width: 100%;
-    height: 80%;
+    /*height: 80%;*/
+    height: 45em;
     display: block;
     position: relative; 
 }
@@ -127,6 +132,10 @@ body {
 .left-arrow, 
 .right-arrow{
     position: absolute; 
+    transform: translate(0, -50%);
+    top: 50%;
+    height: 30em;
+    left: 0;
     width: 3%;
     transition: all .1s linear;
 }
@@ -148,8 +157,8 @@ body {
 
 footer{
     width: 100%;
-    position: fixed; 
-    height: 10%;
+    height: 5em;
+    margin-top: auto;
     text-align: center;
 }
 
