--- a/src/main/resources/static/gallery.css
+++ b/src/main/resources/static/gallery.css
@@ -1,101 +1,81 @@
 body {
-    background: rgb(98,130,50);
-    background: linear-gradient(90deg, rgba(98,130,50,1) 0%, rgba(119,160,58,1) 100%, rgba(37,73,96,1) 100%);
+    background: rgb(66, 64, 65);
+    background: linear-gradient(90deg, rgb(66, 64, 65)0%, rgb(66, 64, 65) 100%, rgba(37,73,96,1) 100%);
 }
 
 #portfolio{
-    background: rgb(119, 160, 58);
+    background:  rgb(6, 113, 102);
 }
-
 .home h1{
     color: rgb(247, 232, 232);
 }
-
 .home p{
     color: rgb(225, 208, 208);
 }
-
 .left-arrow:hover{
-    background: rgba(119,160,58,1);
+    background:rgb(6, 113, 102);
 }
 
 .right-arrow:hover{
-    background: rgba(98,130,50,1);
+    background:rgb(6, 113, 102);
 }
-
-.work {
+.home form {
     background: #FFFFFF; 
+    position: relative;
     transform: translate(-50%, 0);
     left: 50%;
-    width: 65%;
-    max-width: 65em;
-    height: 80%;
-    position: relative; 
+    width: 50%;
+    max-width: 50em;
+    max-height: 40em;
+    height: 60%;
+    display: flex; 
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
-
-table {
-    transform: translate(-50%, 0);
-    position: relative; 
-    left: 50%;
-    top: 10%;
+.home form input, 
+.home form textarea {
+    background: #f2f2f2;
+    width: 80%;
+    transition: all .5s ease-in-out;
+    outline: 0; 
+    border: none; 
+    box-sizing: border-box;
+    overflow: auto;
+    resize: none;
+    font-family: "Roboto";
+    font-size: 1em;
+    margin-bottom: 1em;
+    padding: .7em;
+}
+.home form textarea{
+    height: 20%;
 }
 
-table td {
-    background: whitesmoke;
-    width: 15em;
-    height: 10em;
-    overflow: hidden;
-    vertical-align: top;
+#submit {
+    text-transform: uppercase;
+    background: rgb(231, 225, 225);
+    width: 50%;
+    height: 3em;
 }
 
-.experience{
-    position: relative; 
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("https://api.time.com/wp-content/uploads/2021/02/laptop-home-office.jpg");
-    background-position: center;
-    background-size: contain;
-}
-
-.experience:hover i{
-    color: #333;
-}
-
-.experience:hover p{
-    opacity: 1;
+#submit:hover{
     cursor: pointer;
+    background:rgb(210, 199, 199)
 }
 
-.experience p:hover{
-    text-decoration: underline;
+.home form p{
+    color: #333;
+    font-size: .8em;
 }
 
-.experience i{
-    position: absolute;
-    transition: all .5s ease-in-out;
-    font-size: 1.5em;
-    color: #393636; 
-    position: relative; 
-    top: 10%;
-    left: 85%;
+.home form input:focus, 
+.home form textarea:focus{
+    background: #d8d8d8;
 }
 
-.experience p{
-    position: absolute;
-    background: #333;
-    display: inline-block;
-    transform: translate(-50%, -50%);
-    padding: 1em;
-    border-radius: 5%;
-    left: 50%;
-    top: 50%;
-    font-style: none;
-    opacity: 0;
-    transition: all .5s ease-in-out;
-}
-
-footer {
-    background: rgb(85, 113, 42);
+footer{
+    background: rgb(66, 64, 65);
 }
