--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,10 +1,11 @@
-#home{
-    background: rgb(36,99,161);
-    background: linear-gradient(90deg, rgba(36,99,161,1) 0%, rgba(53,108,162,1) 100%, rgba(37,73,96,1) 100%);
+
+body {
+    background: rgb(56, 54, 55);
+    background: linear-gradient(90deg, rgb(56, 54, 55)0%, rgb(53, 52, 52) 100%, rgba(37,73,96,1) 100%);
 }
 
 .right-arrow:hover{
-    background: rgba(36,99,161,1);
+    background: rgb(6, 113, 102);
 }
 
 #description{
@@ -24,17 +25,26 @@
 }
 
 .home img {
-    width: 10em; 
-    height: 10em; 
+    width: 25em; 
+    height: 25em; 
     border-radius: 5em;
     position: relative; 
     top: 3%;
     transform: translate(-50%, 0);
     left: 50%;
-    border: 3px solid #1d1d27;
+    border:none;
     box-shadow: 12px 5px 15px -5px #333;
+    margin-top: 2%;
 }
 
+.home p{
+    margin-top: 5%;
+    position: relative; 
+    font-size: 1.5em;
+    font-style:oblique;
+    line-height: 1.5em;
+   
+}
 footer{
-    background: rgb(44, 81, 118);
+    background:  rgb(66, 64, 65);
 }
