--- a/src/main/resources/static/movies.css
+++ b/src/main/resources/static/movies.css
@@ -19,7 +19,7 @@ body {
 }
 
 .left-arrow:hover {
-    background:rgba(102,85,143,1);
+    background:rgb(6, 113, 102);
 }
 
 .search-bar-container{
